소개글 추가

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
 							<article id="intro">
 								<h2 class="major">소개</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>항공 레저 스포츠 중 가장 안전한 장비가 열기구(Hot air balloon)입니다.<br>
+									일부 지역에서 헬륨기구(큰 애드벌룬)를 열기구라고 소개하는 곳이 있지만 그것은 열기구가 아닙니다. 열기구란 조종사가 직접 버너를 통해 공기를 데워 상승 부력을 만들어 비행하는 장비가 열기구입니다.<br>
+									열기구는 초경량 항공기에 속하는 비행기이며 모든 안전검사와 관리, 운영은 비행기와 똑같은 법적관리를 받아 운영되고  있습니다.<br>
+									열기구조종사 또한 초경량 항공기 파일럿자격증을 가지고 있어야 하며 고객과 함께 탑승하여 조종, 운영합니다.<br>
+									</p>
+									<p>해운대 열기구!
+									영국의 우주방위산업체인 “린드스트랜드테크놀리지”회사의 제품으로 해운대 열기구는 세계최고의 열기구장비를 만드는 곳에서 제작되었습니다.<br>
+									안전한 장비와 최고의 파일럿과 함께 대한민국에서 가장 아름다운  푸른 바다와  푸른 하늘의 해운대를 동시에 만끽하세요.<br>
+									</p>
+									<p>바람이 잠잠한 일출과 일몰시간을 중심으로 운영되는 해운대열기구.<br>
+									이제 사계절 해운대를 선물합니다.<br>
+									</p>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 							</article>
