--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">소개</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/info01.png" alt="" /></span>
 								<p>항공 레저 스포츠 중 가장 안전한 장비가 열기구(Hot air balloon)입니다.<br>
 									일부 지역에서 헬륨기구(큰 애드벌룬)를 열기구라고 소개하는 곳이 있지만 그것은 열기구가 아닙니다. 열기구란 조종사가 직접 버너를 통해 공기를 데워 상승 부력을 만들어 비행하는 장비가 열기구입니다.<br>
 									열기구는 초경량 항공기에 속하는 비행기이며 모든 안전검사와 관리, 운영은 비행기와 똑같은 법적관리를 받아 운영되고  있습니다.<br>
@@ -61,23 +61,50 @@
 									<p>바람이 잠잠한 일출과 일몰시간을 중심으로 운영되는 해운대열기구.<br>
 									이제 사계절 해운대를 선물합니다.<br>
 									</p>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>위치
+									주소 : 부산 해운대구 중동 1039-8  해운대해수욕장 백사장 (해운대 미포방파제앞입니다)
+								</p>
+								<span class="image main"><img src="images/location.png" alt="" /></span>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">탑승안내</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<span class="image main"><img src="images/info02.png" alt="" /></span>
+								<p><b>해운대열기구는</b><br>
+									열기구와 로프를 연결하여 비행하는 계류식  운영입니다.<br>
+									안전을 위하여 바람이 잠잠한 초속2m 이하 일 경우에만 운영합니다.<br>
+									안전을 위하여 당일현장 기상 및 상황에 따라 파일럿의 판단으로 운영시간 및 탑승인원을 조정할 수도 있습니다.<br>
+									탑승은 현장방문으로만 되며 사전예약은 받지않습니다.<br>
+									방문 전 기상청 동네예보 “해운대 중동”검색 후 시간대별 풍속을 확인, 2m이하를 확인하시기 바랍니다.<br> 
+									해운대가 가장 아름다운 일출과 일몰시간대를 기준으로 운영합니다.<br>
+								</p>
+								<p><b>탑승주의사항</b><br>
+									13세미만 어린이는 보호자와 함께 탑승하시기 바랍니다.<br>
+									여성분들은 바지 및 굽 낮은 신발을 권합니다.<br>
+									건강에 문제가 있으신 분은 탑승 전 파일럿에게 꼭 말씀하신후 안전교육을 받으시기 바랍니다.<br>
+									</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">파일럿소개</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/pilot01.png" alt="" /></span>
+								<p><b>전광일(Kwang-il, JEON)</b><br>
+								1990년도부터 열기구를 시작한 열기구 전문파일럿입니다.<br>
+								부산이 고향이며 현제 해운대에 살고있기에 열기구와 해운대를 가장 잘 알고있는 파일럿입니다.<br>
+								2002년 열기구 파일럿으로 부산 아시아게임 공식홍보위원으로 선정  열기구아시아투어를 하였으며 국내에선 유일하게 열기구를 통한 국위선양으로 2003년 대통령훈장을 수여 받았습니다.<br>
+								</p>
+								<p>현재 11개국이 참여하고 있는 아시아 국제 열기구 축제 조직위원회 한국 대표이며 매년 전세계10여개국의 열기구 대회 및 축제에 초청받아 참여하고 있는 한국대표 파일럿이자 열기구교관으로 그리고 청소년 열기구팀 감독과 유니세프한국위원회 열기구파일럿으로 활동하고있습니다.<br>
+								약30여년동안 단 한건의 안전사고도 없는 완벽한 파일럿이 여러분과 함께 탑승, 운영을 합니다.<br>
+								</p>
+								<span class="image main"><img src="images/pilot02.png" alt="" /></span>
+								<p><b>전광현(Gang-hyun, JEON)</b><br>
+								20여년간 국제 열기구대회 및 열기구축제에 참여한 풍부한 경험을 가진 국제파일럿이자, 국내최초의 대형 연(Big kite)파일럿입니다.<br> 
+								초경량 비행장치인 무인멀티콥터(드론) 교관 자격과 대한 롤러스포츠연맹 공인 심판 및 강사 자격까지 가지고 있는 다양한 레저스포츠 전문가이기도합니다.<br>
+								현재 코리아열기구의 수석 파일럿으로 국제활동을 하고있으며 최근에는 제5회 필리핀 루바오 국제열기구대회 한국대표로 참여하기도 하였습니다.<br>
+								현재 아시아 국제 열기구 축제 조직위원회 한국위원회 사무국장을 겸하고 있습니다.<br>
+								</p>
 							</article>
 
 						<!-- Contact -->
