페이스북 메타정보 추가

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<meta property="og:title" content="해운대 열기구 전망대" />
+    	<meta property="og:image" content="https://www.hhab.co.kr/images/fbogimage.jpg" />
+    	<meta property="og:description" content="해운대 열기구! 세계최고의 열기구장비를 만드는 곳에서 제작되었습니다.안전한 장비와 최고의 파일럿과 함께 대한민국에서 가장 아름다운  푸른 바다와  푸른 하늘의 해운대를 동시에 만끽하세요.."/>
+  
 	</head>
 	<body>
 
