서비스 시작일 변경

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>열기구 전망대</h1>
-								<p>해운대 열기구는 2018년 6월 1일부터 해운대 해수욕장에서 전망대형 열기구를 운영합니다.<br />
+								<p>해운대 열기구는 2018년 6월 중순부터 해운대 해수욕장에서 전망대형 열기구를 운영합니다.<br />
 								고객 여러분의 많은 관심과 사랑 부탁드립니다.
 								</p>
 							</div>
