--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 		<meta property="og:title" content="해운대 열기구 전망대" />
     	<meta property="og:image" content="https://www.hhab.co.kr/images/fbogimage.jpg" />
-    	<meta property="og:description" content="해운대 열기구! 세계최고의 열기구장비를 만드는 곳에서 제작되었습니다.안전한 장비와 최고의 파일럿과 함께 대한민국에서 가장 아름다운  푸른 바다와  푸른 하늘의 해운대를 동시에 만끽하세요.."/>
-  
+		<meta property="og:description" content="해운대 열기구! 세계최고의 열기구장비를 만드는 곳에서 제작되었습니다.안전한 장비와 최고의 파일럿과 함께 대한민국에서 가장 아름다운  푸른 바다와  푸른 하늘의 해운대를 동시에 만끽하세요.."/>
+
 	</head>
 	<body>
 
@@ -69,7 +69,7 @@
 								<p>위치<br>
 									주소 : 부산 해운대구 중동 1039-8  해운대해수욕장 백사장 (미포방파제앞)
 								</p>
-								<span class="image main"><img src="images/location.png" alt="" /></span>
+								<span class="image main"><img src="https://maps.googleapis.com/maps/api/staticmap?center=35.15949,129.16783&zoom=15&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:H%7C35.15949,129.16783&key=AIzaSyA4_n_pRC9YDsd_w4CmKfWnwqgOIadYNOY"></span>
 							</article>
 
 						<!-- Work -->
